// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupHeader Event hides level tag 1`] = `
<div
  className="event-issue-header"
>
  <Title>
    <ProjectLink
      style={null}
      to={
        Object {
          "pathname": "/orgId/projectId/issues/groupID/events/id/",
          "search": "",
        }
      }
    >
      <EventOrGroupTitle
        data={
          Object {
            "culprit": undefined,
            "eventID": "eventID",
            "groupID": "groupID",
            "id": "id",
            "metadata": Object {
              "directive": "metadata directive",
              "message": "metadata message",
              "title": "metadata title",
              "type": "metadata type",
              "uri": "metadata uri",
              "value": "metadata value",
            },
            "type": "default",
          }
        }
        hideLevel={true}
        includeLink={true}
        orgId="orgId"
        projectId="projectId"
        style={
          Object {
            "fontWeight": 600,
          }
        }
      />
    </ProjectLink>
  </Title>
</div>
`;

exports[`EventOrGroupHeader Event renders with \`type = csp\` 1`] = `
<div
  className="event-issue-header"
>
  <Title>
    <ProjectLink
      style={null}
      to={
        Object {
          "pathname": "/orgId/projectId/issues/groupID/events/id/",
          "search": "",
        }
      }
    >
      <EventOrGroupTitle
        data={
          Object {
            "culprit": undefined,
            "eventID": "eventID",
            "groupID": "groupID",
            "id": "id",
            "metadata": Object {
              "directive": "metadata directive",
              "message": "metadata message",
              "title": "metadata title",
              "type": "metadata type",
              "uri": "metadata uri",
              "value": "metadata value",
            },
            "type": "csp",
          }
        }
        includeLink={true}
        orgId="orgId"
        projectId="projectId"
        style={
          Object {
            "fontWeight": 600,
          }
        }
      />
    </ProjectLink>
  </Title>
  <Message>
    metadata message
  </Message>
</div>
`;

exports[`EventOrGroupHeader Event renders with \`type = default\` 1`] = `
<div
  className="event-issue-header"
>
  <Title>
    <ProjectLink
      style={null}
      to={
        Object {
          "pathname": "/orgId/projectId/issues/groupID/events/id/",
          "search": "",
        }
      }
    >
      <EventOrGroupTitle
        data={
          Object {
            "culprit": undefined,
            "eventID": "eventID",
            "groupID": "groupID",
            "id": "id",
            "metadata": Object {
              "directive": "metadata directive",
              "message": "metadata message",
              "title": "metadata title",
              "type": "metadata type",
              "uri": "metadata uri",
              "value": "metadata value",
            },
            "type": "default",
          }
        }
        includeLink={true}
        orgId="orgId"
        projectId="projectId"
        style={
          Object {
            "fontWeight": 600,
          }
        }
      />
    </ProjectLink>
  </Title>
</div>
`;

exports[`EventOrGroupHeader Event renders with \`type = error\` 1`] = `
<div
  className="event-issue-header"
>
  <Title>
    <ProjectLink
      style={null}
      to={
        Object {
          "pathname": "/orgId/projectId/issues/groupID/events/id/",
          "search": "",
        }
      }
    >
      <EventOrGroupTitle
        data={
          Object {
            "culprit": undefined,
            "eventID": "eventID",
            "groupID": "groupID",
            "id": "id",
            "metadata": Object {
              "directive": "metadata directive",
              "message": "metadata message",
              "title": "metadata title",
              "type": "metadata type",
              "uri": "metadata uri",
              "value": "metadata value",
            },
            "type": "error",
          }
        }
        includeLink={true}
        orgId="orgId"
        projectId="projectId"
        style={
          Object {
            "fontWeight": 600,
          }
        }
      />
    </ProjectLink>
  </Title>
  <Message>
    metadata value
  </Message>
</div>
`;

exports[`EventOrGroupHeader Group renders with \`type = csp\` 1`] = `
<div
  className="event-issue-header"
>
  <Title>
    <ProjectLink
      style={null}
      to={
        Object {
          "pathname": "/orgId/projectId/issues/id/",
          "search": "",
        }
      }
    >
      <Tooltip
        title="Error level: Error"
      >
        <GroupLevel
          level="error"
        />
      </Tooltip>
      <EventOrGroupTitle
        data={
          Object {
            "culprit": "culprit",
            "id": "id",
            "level": "error",
            "metadata": Object {
              "directive": "metadata directive",
              "message": "metadata message",
              "title": "metadata title",
              "type": "metadata type",
              "uri": "metadata uri",
              "value": "metadata value",
            },
            "type": "csp",
          }
        }
        includeLink={true}
        orgId="orgId"
        projectId="projectId"
        style={
          Object {
            "fontWeight": 600,
          }
        }
      />
    </ProjectLink>
  </Title>
  <Message>
    metadata message
  </Message>
</div>
`;

exports[`EventOrGroupHeader Group renders with \`type = default\` 1`] = `
<div
  className="event-issue-header"
>
  <Title>
    <ProjectLink
      style={null}
      to={
        Object {
          "pathname": "/orgId/projectId/issues/id/",
          "search": "",
        }
      }
    >
      <Tooltip
        title="Error level: Error"
      >
        <GroupLevel
          level="error"
        />
      </Tooltip>
      <EventOrGroupTitle
        data={
          Object {
            "culprit": "culprit",
            "id": "id",
            "level": "error",
            "metadata": Object {
              "directive": "metadata directive",
              "message": "metadata message",
              "title": "metadata title",
              "type": "metadata type",
              "uri": "metadata uri",
              "value": "metadata value",
            },
            "type": "default",
          }
        }
        includeLink={true}
        orgId="orgId"
        projectId="projectId"
        style={
          Object {
            "fontWeight": 600,
          }
        }
      />
    </ProjectLink>
  </Title>
  <Message>
    culprit
  </Message>
</div>
`;

exports[`EventOrGroupHeader Group renders with \`type = error\` 1`] = `
<div
  className="event-issue-header"
>
  <Title>
    <ProjectLink
      style={null}
      to={
        Object {
          "pathname": "/orgId/projectId/issues/id/",
          "search": "",
        }
      }
    >
      <Tooltip
        title="Error level: Error"
      >
        <GroupLevel
          level="error"
        />
      </Tooltip>
      <EventOrGroupTitle
        data={
          Object {
            "culprit": "culprit",
            "id": "id",
            "level": "error",
            "metadata": Object {
              "directive": "metadata directive",
              "message": "metadata message",
              "title": "metadata title",
              "type": "metadata type",
              "uri": "metadata uri",
              "value": "metadata value",
            },
            "type": "error",
          }
        }
        includeLink={true}
        orgId="orgId"
        projectId="projectId"
        style={
          Object {
            "fontWeight": 600,
          }
        }
      />
    </ProjectLink>
  </Title>
  <Message>
    metadata value
  </Message>
</div>
`;
